[project]
name = "ice-cream-dataops"
version = "0.1.0"
description = "python package for the Cognite CDF Bootcam"
authors = [
    {name = "Jean-Arnaud Ritouret"}
]
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "cognite-toolkit (==0.4.23)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
